	Updated windowmaker to 0.80.2nb1 [jmmv 2003-01-08]
	Added screentest-1.0 [jmmv 2003-01-08]
	Updated silc-client to 0.9.11 [salo 2003-01-09]
	Updated silc-server to 0.9.11 [salo 2003-01-09]
	Updated createbuildlink to 2.4 [uebayasi 2003-01-09]
	Added driftnet-0.1.6 [hubertf 2003-01-09]
	Updated Xft2 to 2.1nb2 [jmmv 2003-01-09]
	Updated gnome-vfs to 1.0.5 [rh 2003-01-09]
	Updated gal to 0.22 [rh 2003-01-09]
	Updated gtkhtml to 1.1.7 [rh 2003-01-09]
	Updated gnumeric to 1.0.12 [rh 2003-01-09]
	Updated pkg_install to 20030109 [schmonz 2003-01-09]
	Updated evolution to 1.2.1 [rh 2003-01-09]
	Updated lyx to 1.2.3 [martti 2003-01-09]
	Updated ipa to 1.3 [jmmv 2003-01-09]
	Updated icewm to 1.2.0nb2 [jmmv 2003-01-09]
	Updated icewm-gnome to 1.2.0nb1 [jmmv 2003-01-09]
	Added psgml-mode-1.2.5 [wiz 2003-01-09]
	Updated jhead to 1.9 [mycroft 2003-01-09]
	Updated xsane to 0.90 [mycroft 2003-01-09]
	Updated p5-MIME-Base64 to 2.16 [mycroft 2003-01-09]
	Updated p5-Digest-MD5 to 2.22 [mycroft 2003-01-09]
	Updated xpilot to 4.5.4 [mycroft 2003-01-09]
	Updated gaim to 0.59.8 [mycroft 2003-01-09]
	Updated mtr to 0.52 [mycroft 2003-01-09]
	Updated mtr-gtk to 0.52 [mycroft 2003-01-09]
	Updated ntop2 to 2.1.54 [mycroft 2003-01-09]
	Updated kermit to 8.0.206 [mycroft 2003-01-09]
	Updated xmame to 0.62.1-rc4 [mycroft 2003-01-09]
	Updated glimpse to 4.17.2 [mycroft 2003-01-09]
	Updated tcl-expect to 5.38.0 [mycroft 2003-01-09]
	Updated abiword to 1.0.3 [mycroft 2003-01-09]
	Updated sawfish-replibs to 1.2 [mycroft 2003-01-09]
	Updated sawfish to 1.2 [mycroft 2003-01-09]
	Updated pilot-link-libs to 0.11.7 [rh 2003-01-10]
	Updated pilot-link to 0.11.7 [rh 2003-01-10]
	Updated p5-pilot-link to 0.11.7 [rh 2003-01-10]
	Updated jpilot to 0.99.3 [rh 2003-01-10]
	Added gob-1.0.12 [rh 2003-01-10]
	Updated libtool to 1.4.20010614nb11 [jlam 2003-01-10]
	Updated libtool-base to 1.4.20010614nb11 [jlam 2003-01-10]
	Updated libtool-info to 1.4.20010614nb11 [jlam 2003-01-10]