@@ -1,17 +1,12 @@
-@comment $NetBSD: PLIST,v 1.3 2002/12/09 16:01:57 tron Exp $
-lib/gtk/themes/engines/libmetal.a
+@comment $NetBSD: PLIST,v 1.4 2003/01/10 08:46:53 jlam Exp $
 lib/gtk/themes/engines/libmetal.la
 lib/gtk/themes/engines/libmetal.so
-lib/gtk/themes/engines/libnotif.a
 lib/gtk/themes/engines/libnotif.la
 lib/gtk/themes/engines/libnotif.so
-lib/gtk/themes/engines/libpixmap.a
 lib/gtk/themes/engines/libpixmap.la
 lib/gtk/themes/engines/libpixmap.so
-lib/gtk/themes/engines/libraleigh.a
 lib/gtk/themes/engines/libraleigh.la
 lib/gtk/themes/engines/libraleigh.so
-lib/gtk/themes/engines/libredmond95.a
 lib/gtk/themes/engines/libredmond95.la
 lib/gtk/themes/engines/libredmond95.so
 share/themes/Metal/ICON.png
